import java.text.SimpleDateFormat

buildscript {
    repositories {
        maven { url = 'https://litesy.bmclapi2.bangbang93.com/maven/' }
        maven { url = 'https://maven.aliyun.com/repository/public/' }
        maven { url = 'https://maven.minecraftforge.net/' }
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '6.0.24'
    }
}

plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
}

apply plugin: 'net.minecraftforge.gradle'

configurations.configureEach {
    resolutionStrategy.cacheDynamicVersionsFor 99999, 'days'
    resolutionStrategy.cacheChangingModulesFor 99999, 'days'
}

def getDynamicVersion() {
    def useAuto = project.findProperty('use_auto_version')?.toString() ?: 'false'
    if (useAuto.toBoolean()) {
        return new SimpleDateFormat("yy.M.d").format(new Date())
    } else {
        return project.findProperty('mod_version')?.toString() ?: "0.0.0"
    }
}

def pVersion = getDynamicVersion()
def pGroup   = project.findProperty('mod_group_id')?.toString() ?: "dev.xyat.kineticarmory"
def pModId   = project.findProperty('mod_id')?.toString() ?: "kineticarmory"

version = pVersion
group = pGroup

base {
    archivesName.set(pModId)
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: project.findProperty('mapping_channel')?.toString() ?: 'official', version: project.findProperty('mapping_version')?.toString()
    copyIdeResources = true

    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                "${pModId}" {
                    source sourceSets.main
                }
            }
        }

        client {
            property 'forge.enabledGameTestNamespaces', pModId
        }

        server {
            property 'forge.enabledGameTestNamespaces', pModId
            args '--nogui'
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    maven { url = 'https://litesy.bmclapi2.bangbang93.com/maven/' }
    maven { url = 'https://maven.aliyun.com/repository/public/' }
    maven { url = 'https://maven.minecraftforge.net/' }
    maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
    maven { url = 'https://maven.blamejared.com' }
    mavenCentral()

    flatDir {
        dir project.findProperty('local_libs_dir') ?: 'libs'
    }
}

def localMod = { String artifactName ->
    File libsDir = file(project.findProperty('local_libs_dir') ?: 'libs')

    if (!libsDir.exists() || !libsDir.isDirectory()) {
        throw new GradleException("Local libs directory does not exist: ${libsDir.absolutePath}")
    }

    File[] jars = libsDir.listFiles()

    if (jars == null) {
        throw new GradleException("Cannot read local libs directory: ${libsDir.absolutePath}")
    }

    String exactName = "${artifactName}.jar"
    String versionPrefix = "${artifactName}-"

    File exactMatch = jars.find { File candidate ->
        candidate.isFile() && candidate.name.equalsIgnoreCase(exactName)
    }

    if (exactMatch != null) {
        return "blank:${artifactName}:local"
    }

    def matches = jars.findAll { File candidate ->
        candidate.isFile()
                && candidate.name.toLowerCase().endsWith('.jar')
                && candidate.name.regionMatches(true, 0, versionPrefix, 0, versionPrefix.length())
    }

    if (matches.isEmpty()) {
        throw new GradleException(
                "Cannot find local mod '${artifactName}' in ${libsDir.absolutePath}"
        )
    }

    if (matches.size() > 1) {
        throw new GradleException(
                "Multiple versions found for '${artifactName}': ${matches.collect { it.name }.join(', ')}"
        )
    }

    File selected = matches[0]

    String version = selected.name.substring(
            versionPrefix.length(),
            selected.name.length() - 4
    )

    if (version.isBlank()) {
        throw new GradleException("Cannot determine local mod version from ${selected.name}")
    }

    return "blank:${artifactName}:${version}"
}

dependencies {
    minecraft "net.minecraftforge:forge:${project.findProperty('minecraft_version')?.toString()}-${project.findProperty('forge_version')?.toString()}"

    implementation fg.deobf(localMod('kineticcore'))
    implementation fg.deobf(localMod('curios'))

    implementation fg.deobf(localMod('kubejs-forge'))
    implementation fg.deobf(localMod('rhino'))
    implementation fg.deobf(localMod('architectury-forge'))
}

tasks.named('processResources', ProcessResources).configure {
    def replaceProperties =[
            minecraft_version           : project.findProperty('minecraft_version')?.toString(),
            minecraft_version_range     : project.findProperty('minecraft_version_range')?.toString(),
            forge_version               : project.findProperty('forge_version')?.toString(),
            forge_version_range         : project.findProperty('forge_version_range')?.toString(),
            loader_version_range        : project.findProperty('loader_version_range')?.toString(),
            kineticcore_version_range   : project.findProperty('kineticcore_version_range')?.toString(),
            curios_version_range        : project.findProperty('curios_version_range')?.toString(),
            kubejs_version_range        : project.findProperty('kubejs_version_range')?.toString(),
            mod_id                      : pModId,
            mod_name                    : project.findProperty('mod_name')?.toString(),
            mod_license                 : project.findProperty('mod_license')?.toString(),
            mod_version                 : pVersion,
            mod_authors                 : project.findProperty('mod_authors')?.toString(),
            mod_description             : project.findProperty('mod_description')?.toString()
    ]

    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties +[
                project: project,
                file: [jarVersion: pVersion]
        ]
    }
}

tasks.named('jar', Jar).configure {
    def customOutputDir = project.findProperty('output_mods_dir')
    if (customOutputDir) {
        destinationDirectory = file(customOutputDir)
    }

    archiveFileName.set("${pModId}-${project.version}.jar")

    manifest {
        attributes([
                'Specification-Title'     : pModId,
                'Specification-Vendor'    : project.findProperty('mod_authors')?.toString() ?: "Unknown",
                'Specification-Version'   : '1',
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : pVersion,
                'Implementation-Vendor'   : project.findProperty('mod_authors')?.toString() ?: "Unknown",
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }

    finalizedBy 'reobfJar'
}

tasks.register('runClientIDE') {
    group = 'build'
    description = 'Start Forge development client (wrapper around runClient)'
    dependsOn 'runClient'
}

tasks.register('runServerIDE') {
    group = 'build'
    description = 'Start Forge development server (wrapper around runServer)'
    dependsOn 'runServer'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs.addAll([
            '-nowarn',
            '-Xlint:none',
            '-Amixin.target.allowUnresolvedTarget=true',
            '-Amixin.suppressTargetWarnings=true'
    ])
}

